fix: 解析类型bug
